--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
+    "@react-pdf/renderer": "^4.3.0",
     "axios": "^1.10.0",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.3",
